Parse synapse studio web root url from workspace response